--- a/public/main.css
+++ b/public/main.css
@@ -310,6 +310,7 @@ input:where([type='button']),
 input:where([type='reset']),
 input:where([type='submit']) {
   -webkit-appearance: button; /* 1 */
+  appearance: button; /* Añadir esta línea */
   background-color: transparent; /* 2 */
   background-image: none; /* 2 */
 }
@@ -354,6 +355,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 
 [type='search'] {
   -webkit-appearance: textfield; /* 1 */
+  appearance: textfield; /* Añadir esta línea */
   outline-offset: -2px; /* 2 */
 }
 
@@ -482,7 +484,7 @@ iframe,
 embed,
 object {
   display: block; /* 1 */
-  vertical-align: middle; /* 2 */
+  appearance: none; /* Añadir esta línea para compatibilidad */
 }
 
 /*
