--- a/App/css/main.css
+++ b/App/css/main.css
@@ -111,3 +111,12 @@
 .carousel-next {
     right: 20px;
 }
+.glass-effect {
+    background: rgba(31, 41, 55, 0.95);  /* gray-800 con alta opacidad */
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    will-change: transform;
+    border: 1px solid rgba(75, 85, 99, 0.3); /* gray-600 con baja opacidad para el borde */
+}
