--- a/App/css/main.css
+++ b/App/css/main.css
@@ -24,7 +24,7 @@
     height: 500px;
     background: #374151;
     overflow: hidden;
-    box-shadow: 
+    box-shadow:
         0 4px 20px rgba(0, 0, 0, 0.1),
         0 10px 40px -10px rgba(55, 65, 81, 0.8);
 }
@@ -48,12 +48,11 @@
     left: 0;
     width: 100%;
     height: 100px;
-    background: linear-gradient(to bottom, 
-        transparent 0%,
-        rgba(55, 65, 81, 0.5) 40%,
-        rgba(55, 65, 81, 0.8) 60%,
-        rgba(55, 65, 81, 1) 100%
-    );
+    background: linear-gradient(to bottom,
+            transparent 0%,
+            rgba(55, 65, 81, 0.5) 40%,
+            rgba(55, 65, 81, 0.8) 60%,
+            rgba(55, 65, 81, 1) 100%);
     pointer-events: none;
 }
 
@@ -111,12 +110,16 @@
 .carousel-next {
     right: 20px;
 }
+
 .glass-effect {
-    background: rgba(31, 41, 55, 0.95);  /* gray-800 con alta opacidad */
+    background: rgba(31, 41, 55, 0.95);
+    /* gray-800 con alta opacidad */
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
     will-change: transform;
-    border: 1px solid rgba(75, 85, 99, 0.3); /* gray-600 con baja opacidad para el borde */
+    border: 1px solid rgba(75, 85, 99, 0.3);
+    /* gray-600 con baja opacidad para el borde */
 }
+
