--- a/public/main.css
+++ b/public/main.css
@@ -1503,9 +1503,11 @@ input:checked + .toggle-bg {
 }
 
 #map {
-    height: calc(100vh - 60px); /* Ajusta la altura según el tamaño del navbar */
+
     z-index: 1; /* Asegúrate de que el mapa esté por debajo del navbar */
+    height: 100vh;
 }
+
 #navbar {
     position: relative;
     z-index: 1000; /* Asegúrate de que el navbar esté por encima del mapa */
