--- a/App/css/main.css
+++ b/App/css/main.css
@@ -124,9 +124,11 @@
 }
 
 #map {
-    height: calc(100vh - 60px); /* Ajusta la altura según el tamaño del navbar */
+
     z-index: 1; /* Asegúrate de que el mapa esté por debajo del navbar */
+    height: 100vh;
 }
+
 #navbar {
     position: relative;
     z-index: 1000; /* Asegúrate de que el navbar esté por encima del mapa */
