--- a/App/css/main.css
+++ b/App/css/main.css
@@ -124,9 +124,9 @@
 }
 
 #map {
-
+    margin-top: 4rem;
     z-index: 1; /* Asegúrate de que el mapa esté por debajo del navbar */
-    height: 100vh;
+    height: 91vh;
 }
 
 #navbar {
